--- a/src/_layouts/home.pug
+++ b/src/_layouts/home.pug
@@ -1,13 +1,25 @@
 doctype html
-html
+html(lang='pt-BR')
   head
-    title= title
-    meta(charset="utf-8")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1")
+    base(href='/')
+    title Refazenda - Festas com afeto
+    meta(charset='utf-8')
+    meta(name='description', content='Festas infantis: decoração e buffet')
+    meta(name='author', content='Pri Silveira')
+    meta(name='viewport', content='width=device-width,initial-scale=1')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    link(href='https://fonts.googleapis.com/css?family=Cinzel|Oregano', rel='stylesheet')
+    link(href='https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css', rel='stylesheet', integrity='sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS', crossorigin='anonymous')
+    link(rel='stylesheet', href='css/style.css?v=1.0')
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
     block head_end
-	
   body
-    block content
-		
-    script(type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
+    .bg-section(data-behavior='parallax-bg')
+    main#content
+      block content
+
     block body_end
+    script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js', integrity='sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut', crossorigin='anonymous')
+    script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js', integrity='sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k', crossorigin='anonymous')
+    script(src='js/scripts.js')
