--- a/src/index.pug
+++ b/src/index.pug
@@ -4,7 +4,7 @@ block head_end
 	link(rel="stylesheet" href="/css/style.css") 
 
 block content
-	include _partials/header
+	include _partials/menu
 
 block body_end
 	script(type="text/javascript" src="/js/script.js")
