first section & data set

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,10 +1,8 @@
 extends _layouts/home
 
 block head_end
-	link(rel="stylesheet" href="/css/style.css") 
 
 block content
-	include _partials/menu
+  include _partials/refazenda
 
 block body_end
-	script(type="text/javascript" src="/js/script.js")
