--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,9 +1,6 @@
+@import "bootstrap"
+@import "font-awesome"
+@import "includes/variables"
+@import "includes/fonts"
+@import "includes/menu"
 @import "includes/base"
-
-header 
-  h1 
-    font-weight: 300
-    text-align: center
-    font-size: 60px
-    margin-top: 180px
-  
