--- a/src/_layouts/home.pug
+++ b/src/_layouts/home.pug
@@ -1,3 +1,4 @@
+- var n = Math.random()
 doctype html
 html(lang='pt-BR')
   head
@@ -8,7 +9,7 @@ html(lang='pt-BR')
     meta(name='author', content='Pri Silveira')
     meta(name='viewport', content='width=device-width,initial-scale=1')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    link(rel='stylesheet', href='css/style.css?v=1.0')
+    link(rel='stylesheet', href='css/style.css?sid=' + n)
     block head_end
   body
     .bg-section(data-behavior='parallax-bg')
