--- a/src/index.pug
+++ b/src/index.pug
@@ -3,6 +3,10 @@ extends _layouts/home
 block head_end
 
 block content
+  include _partials/home
   include _partials/refazenda
+  include _partials/decoracao
+  include _partials/buffet
+  include _partials/contato
 
 block body_end
