--- a/src/sass/includes/base.sass
+++ b/src/sass/includes/base.sass
@@ -1,6 +1,6 @@
 @import "variables"
 body 
-  font-family: Cinzel, serif
+  font-family: Cinzel, serif !important
   font-size: 100%
   line-height: 1.5
   margin: 0
@@ -66,16 +66,6 @@ a
 #decoracao
   .photo-album 
     max-height: calc(100vh - 120px)
-.slide-container 
-  overflow: hidden
-  width: 100%
-  max-height: 85vh
-  img 
-    min-height: 85vh
-    max-height: 89vh
-    min-width: 33vw
-  &.slide-right img 
-    float: right
 .btn-primary 
   background-color: #FAAD10
   border-color: #FAAD10
