--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -2,5 +2,7 @@
 @import "font-awesome"
 @import "includes/variables"
 @import "includes/fonts"
-@import "includes/menu"
 @import "includes/base"
+@import "includes/menu"
+@import "includes/slides"
+@import "includes/mobile"
