photo gallery created

--- a/src/_layouts/home.pug
+++ b/src/_layouts/home.pug
@@ -13,7 +13,7 @@ html(lang='pt-BR')
     block head_end
   body
     .bg-section(data-behavior='parallax-bg')
-    include ../_partials/menu
+    block menu
     main#content
       block content
 
