form sending all set!

--- a/src/_layouts/home.pug
+++ b/src/_layouts/home.pug
@@ -21,4 +21,5 @@ html(lang='pt-BR')
     script(src='js/jquery.js')
     script(src='js/popper.js')
     script(src='js/bootstrap.js')
-    script(src='js/scripts.js')
+    script(src='js/toastr.js')
+    script(src='js/script.js')
