--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,5 +1,6 @@
 @import "bootstrap"
 @import "font-awesome"
+@import "toastr"
 @import "includes/variables"
 @import "includes/fonts"
 @import "includes/base"
