photo gallery set

--- a/src/_partials/_menu.pug
+++ b/src/_partials/_menu.pug
@@ -11,12 +11,14 @@ nav#menu.navbar.navbar-dark.navbar-expand-lg.fixed-top
   #menu-principal.collapse.navbar-collapse
     ul.navbar-nav
       li.nav-item.active
-        a.nav-link(href='#home') Home
+        a.nav-link(href='/#home') Home
       li.nav-item
-        a.nav-link(href='#refazenda') Quem Somos
+        a.nav-link(href='/#refazenda') Quem Somos
       li.nav-item
-        a.nav-link(href='#decoracao') Decoração
+        a.nav-link(href='/#decoracao') Decoração
       li.nav-item
-        a.nav-link(href='#buffet') Buffet
+        a.nav-link(href='/#buffet') Buffet
       li.nav-item
-        a.nav-link(href='#contate-nos') Contato
+        a.nav-link(href='/#contate-nos') Contato
+      li.nav-item
+        a.nav-link(href='/galeria') Galeria de fotos
