--- a/src/index.pug
+++ b/src/index.pug
@@ -3,13 +3,13 @@ extends _layouts/home
 block head_end
 
 block menu
-  include _partials/menu
+  include _partials/_menu
 
 block content
-  include _partials/home
-  include _partials/refazenda
-  include _partials/decoracao
-  include _partials/buffet
-  include _partials/contato
+  include _partials/_home
+  include _partials/_refazenda
+  include _partials/_decoracao
+  include _partials/_buffet
+  include _partials/_contato
 
 block body_end
