form validation & error styling

--- a/src/_layouts/home.pug
+++ b/src/_layouts/home.pug
@@ -22,4 +22,5 @@ html(lang='pt-BR')
     script(src='js/popper.js')
     script(src='js/bootstrap.js')
     script(src='js/toastr.js')
+    script(src='js/jquery.validate.js')
     script(src='js/script.js')
