--- a/src/_partials/_contato.pug
+++ b/src/_partials/_contato.pug
@@ -6,43 +6,43 @@ section#contate-nos.container-fluid
     .col-md-6
       h2.text-center.title Clique e entre em contato:
       .row.justify-content-center
-        a.contact-icon.whatsapp(href='https://wa.me/5511999875635?text=Olá%21%20Gostaria%20de%20mais%20informações.', target='_blank', title='+55 11 99987-5635')
+        a.btn.contact-icon.whatsapp(href='https://wa.me/5511999875635?text=Olá%21%20Gostaria%20de%20mais%20informações.', target='_blank', title='+55 11 99987-5635')
           i.fa.fa-whatsapp.fa-2x.fa-fw.pull-left
           .text-container
             | +55 (11) 99987-5635
-        a.contact-icon.phone(href='tel:11999875635', target='_blank', title='11 99987-5635')
+        a.btn.contact-icon.phone(href='tel:11999875635', target='_blank', title='11 99987-5635')
           i.fa.fa-phone.fa-2x.fa-fw.pull-left
           .text-container
             | (11)99987-5635
-        a.contact-icon.mail(href='mailto:refazenda.fa@gmail.com', target='_blank', title='11 99987-5635')
+        a.btn.contact-icon.mail(href='mailto:refazenda.fa@gmail.com', target='_blank', title='11 99987-5635')
           i.fa.fa-envelope-o.fa-2x.fa-fw.pull-left
           .text-container
             | refazenda.fa@gmail.com
       h2.text-center.title Ou preencha o nosso formulário:
-      //- form(method='POST', action='http://localhost:5000/mail-sender-28ee2/us-central1/enviarEmail')
+      //- form(method='POST', action='http://localhost:5000/mail-sender-28ee2/us-central1/enviarEmail', data-behavior="send-contact")
       form(method='POST', action='https://us-central1-mail-sender-28ee2.cloudfunctions.net/enviarEmail', data-behavior="send-contact")
         .form-row
           label.col-md-5 Nome:
-            input.form-control(name='nome', type='text', placeholder='Nome' data-required="true")
+            input.form-control(name='nome', type='text', placeholder='Nome')
           label.col-md-7 E-mail:
-            input.form-control(name='email', type='email', placeholder='E-mail' data-required="true")
+            input.form-control(name='email', type='email', placeholder='E-mail')
         .form-row
           label.form-group.col-5.col-md-3 Data:
-            input.form-control(name='data', type='date', placeholder='Data' data-required="true")
+            input.form-control(name='data', type='date', placeholder='Data')
           label.form-group.col-7.col-md-4 Qtd pessoas (aprox):
-            input.form-control(name='pax', type='number', placeholder='50' data-required="true")
+            input.form-control(name='pax', type='number', placeholder='50')
           label.form-group.col-md-5.col-12 Tipo:
-            select.form-control(name='tipo' data-required="true")
+            select.form-control(name='tipo')
               option(value='deco+buffet', selected='selected') Buffet & Decoração
               option(value='buffet') Buffet
               option(value='deco') Decoração
         .form-row
           label.form-group.col-12 Mensagem:
-            textarea.form-control(name='mensagem', rows='4' data-required="true")
+            textarea.form-control(name='mensagem', rows='4')
         .form-row
           .form-group.col-12
-            button.btn.btn-light.pull-left(type='reset' data-behavior="reset-form") Cancelar
-            button.btn.btn-secondary.pull-right(type='submit' data-behavior="submit-form") Enviar
+            button.btn.btn-light.pull-left(type='reset', data-behavior="reset-form") Cancelar
+            button.btn.btn-secondary.pull-right(type='submit', data-behavior="submit-form") Enviar
     .col-md-3.hide-mobile
       .slide-container.slide-right
         img(src='images/recre/s-01.jpg', alt='Festa')
