--- a/src/sass/includes/_mobile.sass
+++ b/src/sass/includes/_mobile.sass
@@ -35,6 +35,10 @@
       top: 50%
       left: 50%
       transform: translate(-50%, -50%)
+  #toast-container.toast-top-center
+    .toast
+      width: 80vw
+
 
 @media only screen and (min-width: 550px) and (max-width: 768px) 
   .gallery-item-container
