--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -7,4 +7,5 @@
 @import "includes/menu"
 @import "includes/slides"
 @import "includes/gallery"
+@import "includes/overrides"
 @import "includes/mobile"
